# IB2425

./: .gitignore  README.md  operator_overload.cc  operator_overload.cpp
books/: CMakeLists.txt
books/src/: book.cc  book.h  books.cc
chess/: CMakeLists.txt
chess/src/: chess_piece.cc  chess_piece.h  chess_pieces.cc
chess_move/: CMakeLists.txt
chess_move/src/: ajedrez.txt  chess_moves.cc  chess_piece.cc  chess_piece.h
complex_numbers/: CMakeLists.txt
complex_numbers/src/: complex_number.cc  complex_number.h  complex_numbers.cc
ex1_2425/: Makefile  ej1_coincide.cc  ej2_coeficiente_binomial.cc  ej3_rey.cc  ej3_rey.h  ej3_reyes.cc  ej4_teoria.md  ejemplo_reyes.txt
ex1_2526/: Makefile  articulo.cc  articulo.h  compra.cc  compra.h  compra.txt  ej1_mcd.cc  ej2_compra.cc  ej3_teoria.md
ex2_2425/: Makefile  ej1_vocales.cc  ej2_polinomio.cc  ej3_vector.cc  ej3_vector.h  ej3_vectores.cc  ej4_teoria.md  vectores.txt
ex3_2425/: Makefile  ej1_factores.cc  ej2_ordenar.cc  ej3_matrices.cc  ej3_matriz.cc  ej3_matriz.h  ej4_teoria.md  matrices.txt
graph/: CMakeLists.txt
graph/src/: graph.cc  graph.h  graph.txt  graph_main.cc
integral/: CMakeLists.txt
integral/src/: integral.cc  polinomio.cc  polinomio.h
queens/: CMakeLists.txt
queens/src/: corona.cc  corona.h  reina.cc  reina.h  reinas.cc
shape/: CMakeLists.txt
shape/src/: shape.cc  shape.h  shapes.cc  shapes.h
tasks/: CMakeLists.txt
tasks/src/: factible.txt  imposible.txt  task.cc  task.h  tasks.cc
