cmake_minimum_required(VERSION 3.1)
project(chess_pieces VERSION 1.0 DESCRIPTION "Chess exercise" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wpedantic -Weffc++")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include_directories(${PROJECT_SOURCE_DIR}/src)
add_executable(chess_pieces src/chess_piece.h src/chess_piece.cc src/chess_pieces.cc)
target_compile_features(chess_pieces PRIVATE cxx_std_17)
target_compile_options(chess_pieces PRIVATE -Wall -Wextra -Wpedantic -Weffc++)
