cmake_minimum_required(VERSION 3.1)
project(complex_numbers VERSION 1.0 DESCRIPTION "Complex exercise" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wpedantic -Weffc++")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include_directories(${PROJECT_SOURCE_DIR}/src)
add_executable(complex_numbers src/complex_number.h src/complex_number.cc src/complex_numbers.cc)
target_compile_features(complex_numbers PRIVATE cxx_std_17)
target_compile_options(complex_numbers PRIVATE -Wall -Wextra -Wpedantic -Weffc++)
