cmake_minimum_required(VERSION 3.1)
project(graph VERSION 1.0 DESCRIPTION "Graph exercise" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wpedantic -Weffc++")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include_directories(${PROJECT_SOURCE_DIR}/src)
add_executable(graph src/graph.h src/graph.cc src/graph_main.cc)
target_compile_features(graph PRIVATE cxx_std_17)
target_compile_options(graph PRIVATE -Wall -Wextra -Wpedantic -Weffc++)
